# agentLearning

./: .gitignore  LLMCilent.py
framework/AgentScope/: README.md  __init__.py  main.py  requirements.txt  start_game.ps1  test_api.py
framework/AgentScope/agents/: __init__.py  factory.py  moderator_agent.py  player_agent.py
framework/AgentScope/config/: __init__.py  model.py  settings.py
framework/AgentScope/models/: __init__.py  game_message.py  game_state.py  structured_output.py
framework/AgentScope/utils/: utils.py
framework/AgentScope/workflows/: __init__.py  discussion.py  voting.py
framework/AutoGen/: AutogenSoftwareTeam.py
framework/LangGraph/: dialogue.py
paradigm/planAndSolve/: executor.py  planAndSolveAgent.py  planner.py
paradigm/react/: reActAgent.py
paradigm/react/tool/: calculator.py
paradigm/reflection/: reflectionAgent.py
planAndSolve/: planAndSolveAgent.py  planner.py
rag/: main.ipynb  pyproject.toml
react/: LLM.py  reActAgent.py  toolExecutor.py
react/tool/: search.py
reflection/: prompt.py  reflectionAgent.py
