[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "dashscope>=1.26.3",
    "google-genai>=2.11.0",
    "ipykernel>=7.3.0",
    "openai>=2.45.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
